# api/api.yaml
@@ -148,11 +148,6 @@ paths:
       responses:
         "200":
           description: Files retrieved successfully
-          headers:
-            Content-Disposition:
-              schema:
-                type: string
-              description: Indicates that the content should be downloaded
           content:
             application/json:
               schema:
@@ -179,10 +174,9 @@ paths:
         "200":
           description: File retrieved successfully
           content:
-            application/octet-stream:
+            application/json:
               schema:
-                type: string
-                format: binary
+                $ref: "#/components/schemas/DataSourceFile"
     delete:
       summary: Delete a file in a data source
       operationId: deleteFileInDataSource
@@ -203,6 +197,32 @@ paths:
       responses:
         "204":
           description: File deleted successfully
+  /rag/data_sources/{data_source_id}/files/{file_id}/download:
+    get:
+      summary: Download a file in a data source
+      operationId: downloadFileInDataSource
+      tags:
+        - data_source_files
+      parameters:
+        - name: data_source_id
+          in: path
+          required: true
+          schema:
+            type: integer
+        - name: file_id
+          in: path
+          required: true
+          schema:
+            type: string
+          description: The ID of the file to download
+      responses:
+        "200":
+          description: File downloaded successfully
+          content:
+            application/octet-stream:
+              schema:
+                type: string
+                format: binary
 
   /rag/sessions:
     get:
@@ -415,14 +435,11 @@ components:
         - data_source_id
         - document_id
         - s3_path
-        - vector_upload_timestamp
         - size_in_bytes
         - extension
-        - summary_creation_timestamp
       properties:
         id:
-          type: integer
-          format: int64
+          type: string
           description: Unique identifier for the file
         time_created:
           type: string
@@ -451,10 +468,6 @@ components:
         s3_path:
           type: string
           description: Path to the file in S3
-        vector_upload_timestamp:
-          type: string
-          format: date-time
-          description: The date and time when the file was uploaded
         size_in_bytes:
           type: integer
           format: int64
@@ -462,10 +475,15 @@ components:
         extension:
           type: string
           description: Extension of the file
+        vector_upload_timestamp:
+          type: string
+          format: date-time
+          description: The date and time when the vector embedding was created
         summary_creation_timestamp:
           type: string
           format: date-time
           description: The date and time when the file summary was created
+    
 
     DataSourceFiles:
       type: object
@@ -529,7 +547,6 @@ components:
         - time_updated
         - created_by_id
         - updated_by_id
-        - last_interaction_time
         - data_source_ids
       properties:
         id:
